get css generally working with container stack flow correct --fix the too large question text

--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -1,4 +1,6 @@
 .quiz-container {
+  width: 90%;
+  height: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,6 +9,7 @@
   text-align: center;
   opacity: 0;
   transition: opacity 0.7s ease-in-out;
+  margin: auto;
   background: #fff;
   border-radius: 15px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -18,7 +21,9 @@
   border-radius: 20px;
   padding: 1rem;
   text-align: center;
-  font-size: 1.25rem;
+  font-size: clamp(1rem, 1.75vw, 1.25rem);
+  overflow-wrap: break-word;
+  max-height: 20%;
   color: #f1f1f1;
   margin-bottom: 1.5rem;
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.05);
@@ -26,12 +31,12 @@
 }
 
 .answer-bubble {
+  max-width: 70%;
   background: #f1f1f1;
-  min-width: 80%;
   border-radius: 20px;
   padding: 0.75rem;
   text-align: center;
-  margin-bottom: 1rem;
+  margin: 0 auto 1rem;
   cursor: pointer;
   transition: border 0.35s ease-in-out, background 0.35s ease;
   border: 2px solid transparent;
